--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9241,3 +9241,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-67
+  taskId: 58445765
+  timeCreate: Sun Jan 28 05:36:39 2024
+  timeStart: Sun Jan 28 05:36:58 2024
+  timeFinish: Sun Jan 28 05:45:20 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-137
+  taskId: 58445845
+  timeCreate: Sun Jan 28 06:05:24 2024
+  timeStart: Sun Jan 28 06:06:01 2024
+  timeFinish: Sun Jan 28 06:10:14 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
