--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9277,3 +9277,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-68
+  taskId: 58447510
+  timeCreate: Sun Jan 28 22:25:07 2024
+  timeStart: Sun Jan 28 22:25:34 2024
+  timeFinish: Sun Jan 28 22:33:46 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-139
+  taskId: 58447523
+  timeCreate: Sun Jan 28 22:40:10 2024
+  timeStart: Sun Jan 28 22:40:46 2024
+  timeFinish: Sun Jan 28 22:43:38 2024
+  timeWait: 0 mins
+  timeBuild: 2 mins
+  timeTotal: 3 mins
