--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9313,3 +9313,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-39
+  taskId: 58470951
+  timeCreate: Mon Jan 29 15:27:45 2024
+  timeStart: Mon Jan 29 15:27:59 2024
+  timeFinish: Mon Jan 29 17:10:23 2024
+  timeWait: 0 mins
+  timeBuild: 102 mins
+  timeTotal: 102 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-141
+  taskId: 58474030
+  timeCreate: Mon Jan 29 17:19:30 2024
+  timeStart: Mon Jan 29 17:39:59 2024
+  timeFinish: Mon Jan 29 17:45:00 2024
+  timeWait: 20 mins
+  timeBuild: 5 mins
+  timeTotal: 25 mins
