--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9331,3 +9331,21 @@
   timeWait: 20 mins
   timeBuild: 5 mins
   timeTotal: 25 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-40
+  taskId: 58475359
+  timeCreate: Mon Jan 29 13:06:59 2024
+  timeStart: Mon Jan 29 13:23:15 2024
+  timeFinish: Mon Jan 29 15:19:49 2024
+  timeWait: 16 mins
+  timeBuild: 116 mins
+  timeTotal: 132 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-142
+  taskId: 58477458
+  timeCreate: Mon Jan 29 15:28:21 2024
+  timeStart: Mon Jan 29 15:28:27 2024
+  timeFinish: Mon Jan 29 15:31:42 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
