--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9394,3 +9394,21 @@
   timeWait: 46 mins
   timeBuild: 4 mins
   timeTotal: 51 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-43
+  taskId: 58494705
+  timeCreate: Tue Jan 30 09:16:05 2024
+  timeStart: Tue Jan 30 09:21:51 2024
+  timeFinish: Tue Jan 30 11:20:56 2024
+  timeWait: 5 mins
+  timeBuild: 119 mins
+  timeTotal: 124 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-145
+  taskId: 58497910
+  timeCreate: Tue Jan 30 11:27:35 2024
+  timeStart: Tue Jan 30 11:27:50 2024
+  timeFinish: Tue Jan 30 11:31:47 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
