--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9430,3 +9430,21 @@
   timeWait: 16 mins
   timeBuild: 3 mins
   timeTotal: 20 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.12-11
+  taskId: 58511050
+  timeCreate: Tue Jan 30 17:40:20 2024
+  timeStart: Tue Jan 30 18:21:46 2024
+  timeFinish: Tue Jan 30 18:27:09 2024
+  timeWait: 41 mins
+  timeBuild: 5 mins
+  timeTotal: 46 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-147
+  taskId: 58512884
+  timeCreate: Tue Jan 30 18:33:37 2024
+  timeStart: Tue Jan 30 18:51:17 2024
+  timeFinish: Tue Jan 30 18:56:07 2024
+  timeWait: 17 mins
+  timeBuild: 4 mins
+  timeTotal: 22 mins
