--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9448,3 +9448,21 @@
   timeWait: 17 mins
   timeBuild: 4 mins
   timeTotal: 22 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-70
+  taskId: 58521434
+  timeCreate: Tue Jan 30 22:24:21 2024
+  timeStart: Tue Jan 30 22:25:02 2024
+  timeFinish: Tue Jan 30 22:36:16 2024
+  timeWait: 0 mins
+  timeBuild: 11 mins
+  timeTotal: 11 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-148
+  taskId: 58522157
+  timeCreate: Tue Jan 30 22:52:48 2024
+  timeStart: Tue Jan 30 22:53:12 2024
+  timeFinish: Tue Jan 30 22:57:24 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
