--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9493,3 +9493,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-46
+  taskId: 58556423
+  timeCreate: Wed Jan 31 17:28:40 2024
+  timeStart: Wed Jan 31 17:30:24 2024
+  timeFinish: Wed Jan 31 20:18:41 2024
+  timeWait: 1 mins
+  timeBuild: 168 mins
+  timeTotal: 170 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-150
+  taskId: 58567621
+  timeCreate: Wed Jan 31 20:26:19 2024
+  timeStart: Wed Jan 31 20:26:40 2024
+  timeFinish: Wed Jan 31 20:30:22 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
