--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -1,25 +1,25 @@
 {
   "Purpose": "To set configurations of jenkins jobs including upstream branches, dependencies and disabled status",
-  "Version": "3.12",
+  "Version": "3.13",
   "Jobs": {
     "code": {
-      "3.10": {
-        "upstream_branch": [
-          "7.77.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "7.80.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "main",
           "main"
         ],
         "disabled": false
@@ -33,23 +33,23 @@
       }
     },
     "configbump": {
-      "3.10": {
-        "upstream_branch": [
-          "7.77.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "7.80.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "main",
           "main"
         ],
         "disabled": false
@@ -63,23 +63,23 @@
       }
     },
     "dashboard": {
-      "3.10": {
-        "upstream_branch": [
-          "7.77.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "7.80.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "main",
           "main"
         ],
         "disabled": false
@@ -93,23 +93,23 @@
       }
     },
     "imagepuller": {
-      "3.10": {
-        "upstream_branch": [
-          "7.77.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "7.80.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "main",
           "main"
         ],
         "disabled": false
@@ -123,23 +123,23 @@
       }
     },
     "machineexec": {
-      "3.10": {
-        "upstream_branch": [
-          "7.77.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "7.80.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "main",
           "main"
         ],
         "disabled": false
@@ -153,23 +153,23 @@
       }
     },
     "operator": {
-      "3.10": {
-        "upstream_branch": [
-          "7.77.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "7.80.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "main",
           "main"
         ],
         "disabled": false
@@ -183,23 +183,23 @@
       }
     },
     "server": {
-      "3.10": {
-        "upstream_branch": [
-          "7.77.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "7.80.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "main",
           "main"
         ],
         "disabled": false
@@ -213,24 +213,24 @@
       }
     },
     "devfileregistry": {
-      "3.10": {
-        "upstream_branch": [
-          "devspaces-3.10-rhel-8",
-          "devspaces-3.10-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "devspaces-3.11-rhel-8",
           "devspaces-3.11-rhel-8"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "devspaces-3.12-rhel-8",
           "devspaces-3.12-rhel-8"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "devspaces-3.13-rhel-8",
+          "devspaces-3.13-rhel-8"
         ],
         "disabled": false
       },
@@ -243,24 +243,24 @@
       }
     },
     "pluginregistry": {
-      "3.10": {
-        "upstream_branch": [
-          "devspaces-3.10-rhel-8",
-          "devspaces-3.10-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "devspaces-3.11-rhel-8",
           "devspaces-3.11-rhel-8"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "devspaces-3.12-rhel-8",
           "devspaces-3.12-rhel-8"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "devspaces-3.13-rhel-8",
+          "devspaces-3.13-rhel-8"
         ],
         "disabled": false
       },
@@ -273,21 +273,21 @@
       }
     },
     "idea": {
-      "3.10": {
+      "3.11": {
         "upstream_branch": [
           "20221111",
           "20221111"
         ],
         "disabled": true
       },
-      "3.11": {
+      "3.12": {
         "upstream_branch": [
           "20221111",
           "20221111"
         ],
         "disabled": false
       },
-      "3.12": {
+      "3.13": {
         "upstream_branch": [
           "20221111",
           "20221111"
@@ -303,21 +303,21 @@
       }
     },
     "traefik": {
-      "3.10": {
+      "3.11": {
         "upstream_branch": [
-          "v2.9.6",
-          "v2.9.6"
+          "v2.9.10",
+          "v2.9.10"
         ],
         "disabled": true
       },
-      "3.11": {
+      "3.12": {
         "upstream_branch": [
           "v2.9.10",
           "v2.9.10"
         ],
         "disabled": false
       },
-      "3.12": {
+      "3.13": {
         "upstream_branch": [
           "v2.9.10",
           "v2.9.10"
@@ -333,13 +333,13 @@
       }
     },
     "build-all-images": {
-      "3.10": {
+      "3.11": {
         "disabled": true
       },
-      "3.11": {
+      "3.12": {
         "disabled": false
       },
-      "3.12": {
+      "3.13": {
         "disabled": false
       },
       "3.x": {
@@ -347,24 +347,24 @@
       }
     },
     "udi": {
-      "3.10": {
-        "upstream_branch": [
-          "devspaces-3.10-rhel-8",
-          "devspaces-3.10-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "devspaces-3.11-rhel-8",
           "devspaces-3.11-rhel-8"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "devspaces-3.12-rhel-8",
           "devspaces-3.12-rhel-8"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "devspaces-3.13-rhel-8",
+          "devspaces-3.13-rhel-8"
         ],
         "disabled": false
       },
@@ -379,23 +379,23 @@
   },
   "Management-Jobs": {
     "dsc": {
-      "3.10": {
-        "upstream_branch": [
-          "7.77.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "7.80.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "main",
           "main"
         ],
         "disabled": false
@@ -409,23 +409,23 @@
       }
     },
     "operator-bundle": {
-      "3.10": {
-        "upstream_branch": [
-          "7.77.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.11": {
         "upstream_branch": [
           "7.80.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.13": {
+        "upstream_branch": [
+          "main",
           "main"
         ],
         "disabled": false
@@ -439,13 +439,13 @@
       }
     },
     "get-sources-rhpkg-container-build": {
-      "3.10": {
+      "3.11": {
         "disabled": true
       },
-      "3.11": {
+      "3.12": {
         "disabled": false
       },
-      "3.12": {
+      "3.13": {
         "disabled": false
       },
       "3.x": {
@@ -453,13 +453,13 @@
       }
     },
     "push-latest-container-to-quay": {
-      "3.10": {
+      "3.11": {
         "disabled": true
       },
-      "3.11": {
+      "3.12": {
         "disabled": false
       },
-      "3.12": {
+      "3.13": {
         "disabled": false
       },
       "3.x": {
@@ -467,13 +467,13 @@
       }
     },
     "sync-to-downstream": {
-      "3.10": {
+      "3.11": {
         "disabled": true
       },
-      "3.11": {
+      "3.12": {
         "disabled": false
       },
-      "3.12": {
+      "3.13": {
         "disabled": false
       },
       "3.x": {
@@ -481,13 +481,13 @@
       }
     },
     "update-digests": {
-      "3.10": {
+      "3.11": {
         "disabled": true
       },
-      "3.11": {
+      "3.12": {
         "disabled": false
       },
-      "3.12": {
+      "3.13": {
         "disabled": false
       },
       "3.x": {
@@ -495,13 +495,13 @@
       }
     },
     "send-email-qe-build-list": {
-      "3.10": {
+      "3.11": {
         "disabled": true
       },
-      "3.11": {
+      "3.12": {
         "disabled": false
       },
-      "3.12": {
+      "3.13": {
         "disabled": false
       },
       "3.x": {
@@ -509,13 +509,13 @@
       }
     },
     "slack-notification": {
-      "3.10": {
+      "3.11": {
         "disabled": true
       },
-      "3.11": {
+      "3.12": {
         "disabled": false
       },
-      "3.12": {
+      "3.13": {
         "disabled": false
       },
       "3.x": {
@@ -525,110 +525,110 @@
   },
   "CSVs": {
     "operator-bundle": {
-      "3.10": {
-        "CSV_VERSION": "3.10.1",
-        "CSV_VERSION_PREV": "3.10.0"
-      },
       "3.11": {
         "CSV_VERSION": "3.11.0",
         "CSV_VERSION_PREV": "3.10.1"
       },
       "3.12": {
         "CSV_VERSION": "3.12.0",
-        "CSV_VERSION_PREV": "3.10.1"
+        "CSV_VERSION_PREV": "3.11.0"
+      },
+      "3.13": {
+        "CSV_VERSION": "3.13.0",
+        "CSV_VERSION_PREV": "3.11.0"
       },
       "3.x": {
-        "CSV_VERSION": "3.12.0",
-        "CSV_VERSION_PREV": "3.10.1"
+        "CSV_VERSION": "3.13.0",
+        "CSV_VERSION_PREV": "3.11.0"
       }
     }
   },
   "Other": {
     "Errata": {
-      "3.10": "125617",
       "3.11": "125090",
-      "3.12": "n/a",
+      "3.12": "127262",
+      "3.13": "n/a",
       "3.x": "n/a"
     },
     "Epic": {
-      "3.10": "CRW-5409",
       "3.11": "CRW-5389",
-      "3.12": "n/a",
+      "3.12": "CRW-5680",
+      "3.13": "n/a",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
-      "3.10": "3.10",
       "3.11": "latest",
-      "3.12": "next",
+      "3.12": "latest",
+      "3.13": "next",
       "3.x": "next"
     },
     "DEV_WORKSPACE_CONTROLLER": {
-      "3.10": "v0.13.0",
       "3.11": "v0.13.0",
       "3.12": "v0.13.0",
+      "3.13": "v0.13.0",
       "3.x": "v0.13.0"
     },
     "DEV_HEADER_REWRITE_TRAEFIK_PLUGIN": {
-      "3.10": "v0.1.2",
       "3.11": "v0.1.2",
       "3.12": "v0.1.2",
+      "3.13": "v0.1.2",
       "3.x": "v0.1.2"
     },
     "gopls": {
-      "3.10": "gopls/v0.10.1",
       "3.11": "gopls/v0.10.1",
       "3.12": "gopls/v0.10.1",
+      "3.13": "gopls/v0.10.1",
       "3.x": "gopls/v0.10.1"
     },
     "xdebug": {
-      "3.10": "3.1.6",
       "3.11": "3.1.6",
       "3.12": "3.1.6",
+      "3.13": "3.1.6",
       "3.x": "3.1.6"
     },
     "kubedock": {
-      "3.10": "0.11.0",
       "3.11": "0.11.0",
       "3.12": "0.11.0",
+      "3.13": "0.11.0",
       "3.x": "0.11.0"
     },
     "stow": {
-      "3.10": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85",
       "3.11": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85",
       "3.12": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85",
+      "3.13": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85",
       "3.x": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85"
     },
     "DEV_WORKSPACE_OPERATOR_TAG": {
-      "3.10": "0.21",
       "3.11": "0.21",
       "3.12": "0.21",
+      "3.13": "0.21",
       "3.x": "0.21"
     },
     "CHE_OPENVSX_TAG": {
-      "3.10": "che-openvsx",
       "3.11": "che-openvsx-v0.14.2",
       "3.12": "che-openvsx-v0.14.2",
+      "3.13": "che-openvsx-v0.14.2",
       "3.x": "che-openvsx-v0.14.2"
     },
     "@eclipse-che/plugin-registry-generator": {
-      "3.10": "7.76.0",
       "3.11": "7.80.0",
-      "3.12": "next",
+      "3.12": "7.82.0",
+      "3.13": "next",
       "3.x": "next"
     },
     "OPENSHIFT_VERSIONS_SUPPORTED": {
-      "3.10": [
-        "v4.14",
-        "v4.13",
-        "v4.12",
-        "v4.11"
-      ],
       "3.11": [
         "v4.14",
         "v4.13",
         "v4.12"
       ],
       "3.12": [
+        "v4.15",
+        "v4.14",
+        "v4.13",
+        "v4.12"
+      ],
+      "3.13": [
         "v4.15",
         "v4.14",
         "v4.13",
@@ -642,37 +642,37 @@
       ]
     },
     "OPENSHIFT_CONTENT_SET_VERSION": {
-      "3.10": "4.12",
       "3.11": "4.12",
       "3.12": "4.12",
+      "3.13": "4.12",
       "3.x": "4.12"
     },
     "OCP_TOOLS_CONTENT_SET_VERSION": {
-      "3.10": "4.12",
       "3.11": "4.12",
       "3.12": "4.12",
+      "3.13": "4.12",
       "3.x": "4.12"
     },
     "GOLANG_VERSION": {
-      "3.10": "1.16.2",
       "3.11": "1.16.2",
       "3.12": "1.16.2",
+      "3.13": "1.16.2",
       "3.x": "1.16.2"
     },
     "NODE_VERSION": {
-      "3.10": "18.16.1",
       "3.11": "18.16.1",
       "3.12": "18.16.1",
+      "3.13": "18.16.1",
       "3.x": "18.16.1"
     },
     "YARN_VERSION": {
-      "3.10": "1.22.19",
       "3.11": "1.22.19",
       "3.12": "1.22.19",
+      "3.13": "1.22.19",
       "3.x": "1.22.19"
     }
   },
   "Copyright": [
-    "#\n# Copyright (c) 2018-2023 Red Hat, Inc.\n#    This program and the accompanying materials are made\n#    available under the terms of the Eclipse Public License 2.0\n#    which is available at https://www.eclipse.org/legal/epl-2.0/\n#\n#  SPDX-License-Identifier: EPL-2.0\n#\n#  Contributors:\n#    Red Hat, Inc. - initial API and implementation\n"
+    "#\n# Copyright (c) 2018-2024 Red Hat, Inc.\n#    This program and the accompanying materials are made\n#    available under the terms of the Eclipse Public License 2.0\n#    which is available at https://www.eclipse.org/legal/epl-2.0/\n#\n#  SPDX-License-Identifier: EPL-2.0\n#\n#  Contributors:\n#    Red Hat, Inc. - initial API and implementation\n"
   ]
 }
