--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9619,12 +9619,39 @@
   timeWait: 0 mins
   timeBuild: 15 mins
   timeTotal: 16 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-8
+  taskId: 58671751
+  timeCreate: Sun Feb 4 12:20:32 2024
+  timeStart: Sun Feb 4 12:21:17 2024
+  timeFinish: Sun Feb 4 15:03:21 2024
+  timeWait: 0 mins
+  timeBuild: 162 mins
+  timeTotal: 162 mins
 - name: devspaces-operator-bundle
   tag: 3.13-1
   taskId: 58671886
   timeCreate: Sun Feb 4 12:52:18 2024
   timeStart: Sun Feb 4 12:52:42 2024
   timeFinish: Sun Feb 4 12:55:56 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-7
+  taskId: 58672133
+  timeCreate: Sun Feb 4 15:13:36 2024
+  timeStart: Sun Feb 4 15:13:47 2024
+  timeFinish: Sun Feb 4 15:22:20 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-2
+  taskId: 58672176
+  timeCreate: Sun Feb 4 15:19:18 2024
+  timeStart: Sun Feb 4 15:19:57 2024
+  timeFinish: Sun Feb 4 15:23:07 2024
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
