--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9781,3 +9781,30 @@
   timeWait: 5 mins
   timeBuild: 3 mins
   timeTotal: 9 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-11
+  taskId: 58763215
+  timeCreate: Wed Feb 7 14:41:29 2024
+  timeStart: Wed Feb 7 14:42:23 2024
+  timeFinish: Wed Feb 7 17:20:08 2024
+  timeWait: 0 mins
+  timeBuild: 157 mins
+  timeTotal: 158 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-11
+  taskId: 58769361
+  timeCreate: Wed Feb 7 17:33:09 2024
+  timeStart: Wed Feb 7 17:33:12 2024
+  timeFinish: Wed Feb 7 17:42:51 2024
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-10
+  taskId: 58769489
+  timeCreate: Wed Feb 7 17:38:42 2024
+  timeStart: Wed Feb 7 17:38:56 2024
+  timeFinish: Wed Feb 7 17:42:49 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
