--- a/dependencies/che-plugin-registry/che-editors.yaml
+++ b/dependencies/che-plugin-registry/che-editors.yaml
@@ -5,7 +5,7 @@ editors:
       name: che-incubator/che-idea/latest
       displayName: IntelliJ IDEA Community (Technology Preview)
       description: Red Hat OpenShift Dev Spaces with JetBrains IntelliJ IDEA Community IDE
-      icon: https://resources.jetbrains.com/storage/products/intellij-idea/img/meta/intellij-idea_logo_300x300.png
+      icon: /images/intellij-idea.svg
       attributes:
         publisher: che-incubator
         version: 2022.1
@@ -110,7 +110,7 @@ editors:
       name: che-incubator/che-code/insiders
       displayName: VS Code - Open Source
       description: Red Hat OpenShift Dev Spaces with Microsoft Visual Studio Code - Open Source IDE
-      icon: https://raw.githubusercontent.com/che-incubator/che-code/main/code/resources/server/code-512.png?sanitize=true
+      icon: /images/vscode.svg
       attributes:
         publisher: che-incubator
         version: insiders
@@ -196,7 +196,7 @@ editors:
       name: che-incubator/che-code/latest
       displayName: VS Code - Open Source
       description: Red Hat OpenShift Dev Spaces with Microsoft Visual Studio Code - Open Source IDE
-      icon: https://raw.githubusercontent.com/che-incubator/che-code/main/code/resources/server/code-512.png?sanitize=true
+      icon: /images/vscode.svg
       attributes:
         publisher: che-incubator
         version: latest
