--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9880,3 +9880,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-13
+  taskId: 58795027
+  timeCreate: Thu Feb 8 14:07:43 2024
+  timeStart: Thu Feb 8 14:50:47 2024
+  timeFinish: Thu Feb 8 15:00:27 2024
+  timeWait: 43 mins
+  timeBuild: 9 mins
+  timeTotal: 52 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-14
+  taskId: 58798916
+  timeCreate: Thu Feb 8 15:12:31 2024
+  timeStart: Thu Feb 8 15:29:38 2024
+  timeFinish: Thu Feb 8 15:34:07 2024
+  timeWait: 17 mins
+  timeBuild: 4 mins
+  timeTotal: 21 mins
