--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9898,3 +9898,21 @@
   timeWait: 17 mins
   timeBuild: 4 mins
   timeTotal: 21 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-14
+  taskId: 58805829
+  timeCreate: Thu Feb 8 17:30:25 2024
+  timeStart: Thu Feb 8 17:31:01 2024
+  timeFinish: Thu Feb 8 17:40:44 2024
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 10 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-15
+  taskId: 58807116
+  timeCreate: Thu Feb 8 17:52:55 2024
+  timeStart: Thu Feb 8 18:43:38 2024
+  timeFinish: Thu Feb 8 18:47:48 2024
+  timeWait: 50 mins
+  timeBuild: 4 mins
+  timeTotal: 54 mins
