--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9916,3 +9916,21 @@
   timeWait: 50 mins
   timeBuild: 4 mins
   timeTotal: 54 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.13-4
+  taskId: 58827217
+  timeCreate: Fri Feb 9 05:33:06 2024
+  timeStart: Fri Feb 9 05:33:13 2024
+  timeFinish: Fri Feb 9 06:00:36 2024
+  timeWait: 0 mins
+  timeBuild: 27 mins
+  timeTotal: 27 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-16
+  taskId: 58828825
+  timeCreate: Fri Feb 9 06:17:07 2024
+  timeStart: Fri Feb 9 06:17:51 2024
+  timeFinish: Fri Feb 9 06:21:54 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
