--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9970,3 +9970,75 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.13-2
+  taskId: 58856429
+  timeCreate: Sun Feb 11 08:54:03 2024
+  timeStart: Sun Feb 11 08:54:39 2024
+  timeFinish: Sun Feb 11 09:07:18 2024
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 13 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.13-5
+  taskId: 58856431
+  timeCreate: Sun Feb 11 08:54:31 2024
+  timeStart: Sun Feb 11 08:54:40 2024
+  timeFinish: Sun Feb 11 09:17:38 2024
+  timeWait: 0 mins
+  timeBuild: 22 mins
+  timeTotal: 23 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.13-2
+  taskId: 58856432
+  timeCreate: Sun Feb 11 08:55:06 2024
+  timeStart: Sun Feb 11 08:55:27 2024
+  timeFinish: Sun Feb 11 09:08:02 2024
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 12 mins
+- name: devspaces-operator
+  tag: 3.13-3
+  taskId: 58856434
+  timeCreate: Sun Feb 11 08:55:25 2024
+  timeStart: Sun Feb 11 08:55:28 2024
+  timeFinish: Sun Feb 11 09:11:11 2024
+  timeWait: 0 mins
+  timeBuild: 15 mins
+  timeTotal: 15 mins
+- name: devspaces-server-rhel8
+  tag: 3.13-4
+  taskId: 58856436
+  timeCreate: Sun Feb 11 08:55:36 2024
+  timeStart: Sun Feb 11 08:56:15 2024
+  timeFinish: Sun Feb 11 09:04:04 2024
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.13-2
+  taskId: 58856437
+  timeCreate: Sun Feb 11 08:55:37 2024
+  timeStart: Sun Feb 11 08:56:16 2024
+  timeFinish: Sun Feb 11 09:01:48 2024
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 6 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.13-2
+  taskId: 58856439
+  timeCreate: Sun Feb 11 08:55:56 2024
+  timeStart: Sun Feb 11 08:56:16 2024
+  timeFinish: Sun Feb 11 09:21:25 2024
+  timeWait: 0 mins
+  timeBuild: 25 mins
+  timeTotal: 25 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-19
+  taskId: 58856494
+  timeCreate: Sun Feb 11 09:18:12 2024
+  timeStart: Sun Feb 11 09:18:28 2024
+  timeFinish: Sun Feb 11 09:21:33 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
