--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10150,3 +10150,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-20
+  taskId: 58893022
+  timeCreate: Mon Feb 12 22:24:08 2024
+  timeStart: Mon Feb 12 22:24:50 2024
+  timeFinish: Mon Feb 12 22:33:14 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-25
+  taskId: 58894241
+  timeCreate: Mon Feb 12 22:57:50 2024
+  timeStart: Mon Feb 12 22:58:00 2024
+  timeFinish: Mon Feb 12 23:01:43 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
