--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9583,3 +9583,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.12-32
+  taskId: 58902301
+  timeCreate: Tue Feb 13 09:22:44 2024
+  timeStart: Tue Feb 13 09:23:16 2024
+  timeFinish: Tue Feb 13 09:47:58 2024
+  timeWait: 0 mins
+  timeBuild: 24 mins
+  timeTotal: 25 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-153
+  taskId: 58904098
+  timeCreate: Tue Feb 13 10:06:40 2024
+  timeStart: Tue Feb 13 10:06:45 2024
+  timeFinish: Tue Feb 13 10:11:13 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
