--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10186,3 +10186,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-15
+  taskId: 58915236
+  timeCreate: Tue Feb 13 13:47:56 2024
+  timeStart: Tue Feb 13 13:48:05 2024
+  timeFinish: Tue Feb 13 17:58:26 2024
+  timeWait: 0 mins
+  timeBuild: 250 mins
+  timeTotal: 250 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-21
+  taskId: 58923000
+  timeCreate: Tue Feb 13 17:24:49 2024
+  timeStart: Tue Feb 13 17:25:21 2024
+  timeFinish: Tue Feb 13 17:33:55 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-27
+  taskId: 58923448
+  timeCreate: Tue Feb 13 17:57:48 2024
+  timeStart: Tue Feb 13 18:00:18 2024
+  timeFinish: Tue Feb 13 18:04:25 2024
+  timeWait: 2 mins
+  timeBuild: 4 mins
+  timeTotal: 6 mins
