--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10276,3 +10276,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.13-8
+  taskId: 59043630
+  timeCreate: Fri Feb 16 09:08:56 2024
+  timeStart: Fri Feb 16 09:23:17 2024
+  timeFinish: Fri Feb 16 09:49:31 2024
+  timeWait: 14 mins
+  timeBuild: 26 mins
+  timeTotal: 40 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-31
+  taskId: 59045879
+  timeCreate: Fri Feb 16 10:10:47 2024
+  timeStart: Fri Feb 16 10:12:28 2024
+  timeFinish: Fri Feb 16 10:16:39 2024
+  timeWait: 1 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
