--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9682,6 +9682,15 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-61
+  taskId: 59042917
+  timeCreate: Fri Feb 16 08:36:01 2024
+  timeStart: Fri Feb 16 08:36:31 2024
+  timeFinish: Fri Feb 16 11:16:00 2024
+  timeWait: 0 mins
+  timeBuild: 159 mins
+  timeTotal: 159 mins
 - name: devspaces-dashboard-rhel8
   tag: 3.12-34
   taskId: 59043567
@@ -9700,3 +9709,12 @@
   timeWait: 1 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-157
+  taskId: 59048795
+  timeCreate: Fri Feb 16 11:44:14 2024
+  timeStart: Fri Feb 16 11:44:43 2024
+  timeFinish: Fri Feb 16 11:47:51 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
