--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9736,3 +9736,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.12-18
+  taskId: 59089013
+  timeCreate: Mon Feb 19 09:01:00 2024
+  timeStart: Mon Feb 19 09:01:41 2024
+  timeFinish: Mon Feb 19 09:36:49 2024
+  timeWait: 0 mins
+  timeBuild: 35 mins
+  timeTotal: 35 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-159
+  taskId: 59090659
+  timeCreate: Mon Feb 19 09:55:28 2024
+  timeStart: Mon Feb 19 09:55:48 2024
+  timeFinish: Mon Feb 19 10:00:38 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
