--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9808,3 +9808,75 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.12-10
+  taskId: 59203162
+  timeCreate: Wed Feb 21 22:10:41 2024
+  timeStart: Wed Feb 21 22:11:20 2024
+  timeFinish: Wed Feb 21 22:25:10 2024
+  timeWait: 0 mins
+  timeBuild: 13 mins
+  timeTotal: 14 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.12-11
+  taskId: 59203197
+  timeCreate: Wed Feb 21 22:13:54 2024
+  timeStart: Wed Feb 21 22:14:26 2024
+  timeFinish: Wed Feb 21 22:26:55 2024
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 13 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.12-14
+  taskId: 59203210
+  timeCreate: Wed Feb 21 22:15:10 2024
+  timeStart: Wed Feb 21 22:15:13 2024
+  timeFinish: Wed Feb 21 22:20:35 2024
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.12-13
+  taskId: 59203214
+  timeCreate: Wed Feb 21 22:15:27 2024
+  timeStart: Wed Feb 21 22:16:00 2024
+  timeFinish: Wed Feb 21 22:47:39 2024
+  timeWait: 0 mins
+  timeBuild: 31 mins
+  timeTotal: 32 mins
+- name: devspaces-operator
+  tag: 3.12-20
+  taskId: 59203215
+  timeCreate: Wed Feb 21 22:15:36 2024
+  timeStart: Wed Feb 21 22:16:01 2024
+  timeFinish: Wed Feb 21 22:32:41 2024
+  timeWait: 0 mins
+  timeBuild: 16 mins
+  timeTotal: 17 mins
+- name: devspaces-server-rhel8
+  tag: 3.12-33
+  taskId: 59203288
+  timeCreate: Wed Feb 21 22:22:53 2024
+  timeStart: Wed Feb 21 22:23:07 2024
+  timeFinish: Wed Feb 21 22:31:23 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-idea-rhel8
+  tag: 3.12-10
+  taskId: 59203303
+  timeCreate: Wed Feb 21 22:24:32 2024
+  timeStart: Wed Feb 21 22:24:38 2024
+  timeFinish: Wed Feb 21 22:39:56 2024
+  timeWait: 0 mins
+  timeBuild: 15 mins
+  timeTotal: 15 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-162
+  taskId: 59203705
+  timeCreate: Wed Feb 21 22:44:37 2024
+  timeStart: Wed Feb 21 22:45:16 2024
+  timeFinish: Wed Feb 21 22:48:56 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
